[package]
name = "lemma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tracing = "0.1.37"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = { version = "0.2.4", features=["no-env-filter"] }
