[package]
name = "vrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lemma = { path = "../lemma" }
bytes = "1.4.0"
dirs = "5.0.1"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = "0.2.4"
