[package]
name = "vrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyric = { path = "../lyric" }
bytes = "1.7.2"
dirs = "5.0.1"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
shellexpand = "3.1.0"
nanoid = "0.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = "0.2.5"
