[package]
name = "vrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyric = { path = "../lyric" }
bytes = "1.10.1"
dirs = "5.0.1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
shellexpand = "3.1.1"
nanoid = "0.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = "0.2.5"
