[package]
name = "lyric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-fmt = "0.4.0"
nanoid = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
void = "1.0.2"
tokio = "1.38.0" # for async / run.rs tests
