[package]
name = "lyric"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-fmt = "0.4.3"
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.69"
tracing = "0.1.41"

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
void = "1.0.2"
tokio = "1.48.0" # for async / run.rs tests
