[package]
name = "vrsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrsd"
path = "src/main.rs"

[dependencies]
vrs = { path = "../core" }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
