[package]
name = "vrsctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrs = { path = "../libvrs" }
lyric = { path = "../lyric" }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.4.13", features = ["cargo", "derive", "string"] }
rustyline = { version = "13.0.0", features = ["derive"] }
dirs = "5.0.1"
