[package]
name = "vrsctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrs = { path = "../libvrs" }
lyric = { path = "../lyric" }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["cargo", "derive", "string"] }
rustyline = { version = "14.0.0", features = ["derive"] }
dirs = "5.0.1"
clearscreen = "3.0.0"
