[package]
name = "vrsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrsd"
path = "src/main.rs"

[dependencies]
vrs = { path = "../libvrs" }
lemma = { path = "../lemma" }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
