[package]
name = "vrsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrsd"
path = "src/main.rs"

[dependencies]
vrs = { path = "../libvrs" }
lyric = { path = "../lyric" }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
