[package]
name = "vrsd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrsd"
path = "src/main.rs"

[dependencies]
vrs = { path = "../libvrs" }
lyric = { path = "../lyric" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
