[package]
name = "vrsjmp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["wry", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.6"
tracing = "0.1.41"
nucleo-matcher = "0.3.1"
vrs = { path = "../../libvrs" }
lyric = { path = "../../lyric" }
anyhow = "1.0.100"
tokio = "1.48.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
